<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="cl.desafiolatam.pruebamoduloandroidjava.modelo.HeroeItem"/>
        <variable
            name="superHeroe"
            type="HeroeItem" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="304dp"
            android:layout_height="681dp"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@{superHeroe.name}"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivHeroeItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvNombre"
                    tools:srcCompat="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="424dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivHeroeItem">

                    <LinearLayout
                        android:id="@+id/ly1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/etNombreCompleto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="0"
                            android:textSize="20sp"
                            android:text="@string/nombre" />

                        <TextView
                            android:id="@+id/tvNombreCompleto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:text="@{superHeroe.biography.fullName}"
                            android:textAlignment="textStart"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ly2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        >

                        <TextView
                            android:id="@+id/etAlias"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="0"
                            android:textSize="20sp"
                            android:text="@string/alias" />

                        <TextView
                            android:id="@+id/tvAlias"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textAlignment="textStart"
                            android:text="@{superHeroe.biography.aliases.get(0)}" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ly3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        >

                        <TextView
                            android:id="@+id/etGenero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="0"
                            android:textSize="20sp"
                            android:text="@string/genero" />

                        <TextView
                            android:id="@+id/tvGenero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textAlignment="textStart"
                            android:text="@{superHeroe.appearance.gender}" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ly4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/etRaza"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="0"
                            android:textSize="20sp"
                            android:text="@string/raza" />

                        <TextView
                            android:id="@+id/tvRaza"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textAlignment="textStart"
                            android:text="@{superHeroe.appearance.race}" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ly5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/etAltura"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="0"
                            android:textSize="20sp"
                            android:text="@string/altura" />

                        <TextView
                            android:id="@+id/tvAltura"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textAlignment="textStart"
                            android:text="@{superHeroe.appearance.height.get(1)}" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ly6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/etPeso"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="0"
                            android:textSize="20sp"
                            android:text="@string/peso" />

                        <TextView
                            android:id="@+id/tvPeso"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="5dp"
                            android:layout_weight="1"
                            android:textSize="20sp"
                            android:textAlignment="textStart"
                            android:text="@{superHeroe.appearance.weight.get(1)}" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>